# catfe-ctrl-alt-elite

./: README.md
architecture/: readme.md
code/src/Finsure CLI/finsure/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  api_responses.json  generated_testcases.txt  pyproject.toml  struct.txt  synthetic_test_cases.json  test_case_report.html  tox.ini
code/src/Finsure CLI/finsure/.github/workflows/: action.yml
code/src/Finsure CLI/finsure/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
code/src/Finsure CLI/finsure/src/finsure/: CICD.py  Chat_agent_test.py  __init__.py  browser_automation.py  chatbot_testing.py  cli.py  compliance.py  generate_testcases.py  generation.py  payment.py  regulatory_compliance.py  temp_testcases.txt  test_chatbot.py  ui_testing.py
code/src/Finsure CLI/finsure/src/finsure/payments-testing/: ErrorLogs.txt  generated_test.html  test.py
code/src/Finsure CLI/finsure/src/finsure/payments-testing/backend/: Dockerfile  requirements.txt
code/src/Finsure CLI/finsure/src/finsure/payments-testing/backend/src/: mock_api.py  paypal_config.py  test_executor.py  test_generator.py
code/src/Finsure CLI/finsure/src/finsure/payments-testing/backend/src/tests/: Payment_transactions.txt  fed_chips_payment.txt  payment_payload.json  swift_mt103.txt
code/src/Finsure CLI/finsure/src/finsure/payments-testing/frontend/: Dockerfile
code/src/Finsure CLI/finsure/src/finsure/payments-testing/frontend/src/: dynamic_test_cases.json  sample_test.json  test_results.json
code/src/Finsure CLI/finsure/tests/: __init__.py  test_finsure.py
code/src/Finsure VS code plugin/plugin/: CHANGELOG.md  README.md  api_responses.json  chatbot_injection_testcases.txt  generated_test.html  generated_testcases.txt  package-lock.json  package.json  synthetic_test_cases.json  temp_testcases.txt  test_case_report.html
code/src/Finsure VS code plugin/plugin/scripts/: dummy.py  (+9 more)
(+22 files in other folders)
