[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finsure"
version = "0.1.0"
description = "Finance Context aware testing tool for payment gateways, Fraud and AML detection, Compliance check"
readme = "README.rst"
authors = [
  {name = "Jyothikamalesh", email = "audreyr@example.com"}
]
maintainers = [
  {name = "Jyothikamalesh", email = "audreyr@example.com"}
]
license = {text = "Not open source"}

dependencies = [
    "typer[all]",  # CLI framework
    "rich", # CLI output formatting
    "streamlit",
    "watchdog"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # type checking
    "pytest",  # testing framework
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/audreyr/finsure/issues"
changelog = "https://github.com/audreyr/finsure/blob/master/changelog.md"
homepage = "https://github.com/audreyr/finsure"

[project.scripts]
finsure = "finsure.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}  # Make sure this points to your source directory
packages = ["finsure"]

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy Configuration
[tool.mypy]
files = "."

strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

